--- a/kdbtlB.cabal
+++ b/kdbtlB.cabal
@@ -28,6 +28,7 @@ library
       Myapp
       Mydata
       Mydous
+      Myenai
       Myfunc
   other-modules:
       Paths_kdbtlB
@@ -41,6 +42,7 @@ library
     , microlens
     , microlens-mtl
     , microlens-th
+    , random
     , split
     , vty
   default-language: Haskell2010
@@ -60,6 +62,7 @@ executable kdbtlB-exe
     , microlens
     , microlens-mtl
     , microlens-th
+    , random
     , split
     , vty
   default-language: Haskell2010
@@ -80,6 +83,7 @@ test-suite kdbtlB-test
     , microlens
     , microlens-mtl
     , microlens-th
+    , random
     , split
     , vty
   default-language: Haskell2010
